--- a/because-app/src/App.css
+++ b/because-app/src/App.css
@@ -1,6 +1,7 @@
-/* Prompt*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-/* Prompt section */
 .prompt {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,9 +25,9 @@
 /* Flexbox layout for form inputs and button */
 .prompt-container form {
   display: flex;
-  flex-direction: row; /* Ensure items are in a row */
+  flex-direction: row;
   align-items: center;
-  gap: 10px; /* Add space between the input fields and button */
+  gap: 10px;
 }
 
 /* Label and input container */
@@ -39,7 +40,7 @@
 .prompt-container label h3 {
   font-size: 24px;
   font-weight: bold;
-  margin-right: 10px; /* Space between label and input */
+  margin-right: 10px;
   color: white;
 }
 
@@ -53,7 +54,7 @@
   font-weight: 500;
   font-size: 18px;
   letter-spacing: 0.8px;
-  width: 200px; /* Adjust width if needed */
+  width: 200px;
   transition: 0.3s ease-in-out;
 }
 
@@ -106,101 +107,3 @@
   position: relative;
   z-index: 1;
 }
-
-/* .prompt {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-}
-
-.App-header h2 {
-  font-size: 48px;
-  font-weight: 700;
-  margin-bottom: 30px;
-  text-align: center;
-  color: #fff;
-}
-
-.prompt-container form {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 10px;
-}
-
-.prompt-container form input,
-.prompt-container form textarea {
-  width: 100%;
-  background: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
-  color: #fff;
-  margin: 0 0 8px 0;
-  padding: 18px 26px;
-  font-weight: 500;
-  font-size: 18px;
-  letter-spacing: 0.8px;
-  transition: 0.3s ease-in-out;
-}
-
-
-.prompt-container label {
-  margin-right: 10px;
-  font-size: 16px;
-  color: white;
-}
-
-.prompt form input:focus,
-.prompt form textarea:focus {
-  background: rgba(255, 255, 255, 1);
-  color: #121212;
-}
-.prompt form input::placeholder,
-.prompt form textarea::placeholder {
-  font-size: 16px;
-  font-weight: 400;
-  color: #fff;
-}
-.prompt form input:focus::placeholder,
-.prompt form textarea:focus::placeholder {
-  color: #121212;
-  opacity: 0.8;
-}
-.prompt form button {
-  font-weight: 700;
-  display: block;
-  color: #fff;
-  background-color: transparent;
-  padding: 14px 48px;
-  font-size: 18px;
-  margin: auto;
-  border-radius: 0;
-  position: relative;
-  transition: 0.3s ease-in-out;
-  border: 1px solid white;
-}
-.prompt form button span {
-  z-index: 1;
-  position: relative;
-}
-.prompt form button:hover {
-  color: black;
-}
-.prompt form button::before {
-  content: "";
-  background: white;
-  width: 0;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  transition: 0.3s ease-in-out;
-}
-.prompt form button:hover::before {
-  width: 100%;
-}
- */
