--- a/because-app/src/App.css
+++ b/because-app/src/App.css
@@ -1,9 +1,9 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-@import "tailwindcss/tailwind.css";
+@import "tailwindcss/tailwind.css"; */
 
 
 
